--- a/assets/package.json
+++ b/assets/package.json
@@ -16,6 +16,7 @@
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "clean-css": "^4.1.9",
+    "copy-webpack-plugin": "^4.2.0",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
